Design Pattern MVC

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">Temprature Converter</string>
     <string name="celsius">Celsius</string>
     <string name="reamur">Reamur</string>
     <string name="fahrenheit">Fahrenheit</string>
